Minor UI improvements.

--- a/PasswordRegenerator/PasswordRegenerator/Views/GeneratorOptionsPage.xaml
+++ b/PasswordRegenerator/PasswordRegenerator/Views/GeneratorOptionsPage.xaml
@@ -5,33 +5,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="PasswordRegenerator.Views.GeneratorOptionsPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Picker x:Name="LengthPicker" Title="Length"
-                    ItemsSource="{Binding LengthOptions}"
-                    ItemDisplayBinding="{Binding Name}"
-                    SelectedItem="{Binding SelectedLength}" />
-            <Picker Title="Lowercase"
-                    ItemsSource="{Binding LowercaseBoundsOptions}"
-                    ItemDisplayBinding="{Binding Name}"
-                    SelectedItem="{Binding SelectedLowercaseBounds}" />
-            <Picker Title="Uppercase"
-                    ItemsSource="{Binding UppercaseBoundsOptions}"
-                    ItemDisplayBinding="{Binding Name}"
-                    SelectedItem="{Binding SelectedUppercaseBounds}" />
-            <Picker Title="Numbers"
-                    ItemsSource="{Binding NumberBoundsOptions}"
-                    ItemDisplayBinding="{Binding Name}"
-                    SelectedItem="{Binding SelectedNumberBounds}" />
-            <Picker Title="Symbols"
-                    ItemsSource="{Binding SymbolBoundsOptions}"
-                    ItemDisplayBinding="{Binding Name}"
-                    SelectedItem="{Binding SelectedSymbolBounds}" />
-            <Picker Title="Symbol Type" />
-            <Button Text="Save" Command="{Binding SaveCommand}"
-                    Clicked="SaveButton_Clicked" />
-            <Button Text="Cancel" Command="{Binding CancelCommand}"
-                    Clicked="CancelButton_Clicked" />
-        </StackLayout>
-    </ContentPage.Content>
+    <StackLayout Padding="10">
+        <Picker x:Name="LengthPicker" Title="Length"
+                ItemsSource="{Binding LengthOptions}"
+                ItemDisplayBinding="{Binding Name}"
+                SelectedItem="{Binding SelectedLength}" />
+        <Picker Title="Lowercase"
+                ItemsSource="{Binding LowercaseBoundsOptions}"
+                ItemDisplayBinding="{Binding Name}"
+                SelectedItem="{Binding SelectedLowercaseBounds}" />
+        <Picker Title="Uppercase"
+                ItemsSource="{Binding UppercaseBoundsOptions}"
+                ItemDisplayBinding="{Binding Name}"
+                SelectedItem="{Binding SelectedUppercaseBounds}" />
+        <Picker Title="Numbers"
+                ItemsSource="{Binding NumberBoundsOptions}"
+                ItemDisplayBinding="{Binding Name}"
+                SelectedItem="{Binding SelectedNumberBounds}" />
+        <Picker Title="Symbols"
+                ItemsSource="{Binding SymbolBoundsOptions}"
+                ItemDisplayBinding="{Binding Name}"
+                SelectedItem="{Binding SelectedSymbolBounds}" />
+        <Picker Title="Symbol Set" />
+        <Button Text="Save" Command="{Binding SaveCommand}"
+                Clicked="SaveButton_Clicked" />
+        <Button Text="Cancel" Command="{Binding CancelCommand}"
+                Clicked="CancelButton_Clicked" />
+    </StackLayout>
 </ContentPage>
